<resources>
    <string name="app_name">electroCAL</string>
    <string name="no_of_days">No.of days</string>
    <string name="no_of_units_consumed">No.of units consumed</string>
    <string name="calculate">CALCULATE</string>
    <string name="charge_for_units">Charge for units consumed (Rs.)</string>
    <string name="back">Back</string>
    <string name="service_charges">Service Charges (Rs.)</string>
    <string name="total_bill">Total bill (Rs.)</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="logo_image_description">it contains logo</string>
</resources>
