<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_bill"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_centerVertical="true"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="35dp"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="35dp"
        android:text="@string/service_charges"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/charge_for_units"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/textView1"
        android:layout_alignRight="@+id/textView1"
        android:layout_alignEnd="@+id/textView1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:layout_below="@+id/textView"
        android:layout_alignRight= "@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:layout_below="@+id/textView3"
        android:layout_alignRight= "@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <Button
        android:id="@+id/_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="35dp"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
